[gd_scene load_steps=6 format=3 uid="uid://bde64pfhg0egw"]

[ext_resource type="FontFile" uid="uid://b6fk3xgwcqw21" path="res://font/kenvector_future_thin.ttf" id="1_8dvc6"]
[ext_resource type="Script" path="res://scripts/start_screen.gd" id="1_prasj"]
[ext_resource type="FontFile" uid="uid://bxb8b01074ojv" path="res://font/kenvector_future.ttf" id="2_co505"]

[sub_resource type="LabelSettings" id="LabelSettings_6lrfm"]
font = ExtResource("2_co505")
font_size = 96

[sub_resource type="LabelSettings" id="LabelSettings_78ou3"]
line_spacing = 10.0
font = ExtResource("1_8dvc6")
font_size = 24

[node name="StartScreen" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80
script = ExtResource("1_prasj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="GameTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SPACE ROCKS"
label_settings = SubResource("LabelSettings_6lrfm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonVBox" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="VBoxContainer/ButtonVBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_8dvc6")
theme_override_font_sizes/font_size = 48
text = "START"

[node name="ControlsButton" type="Button" parent="VBoxContainer/ButtonVBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_8dvc6")
theme_override_font_sizes/font_size = 48
text = "CONTROLS"

[node name="ControlsTxtBox" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ControlsTxt" type="Label" parent="VBoxContainer/ControlsTxtBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Press [W] to move forward
Press [S] to move backward
Press [A] to rotate left
Press [D] to rotate right
Hold/Press [SPACE] or [LEFT MOUSE] to shoot

PRESS [R] TO RESET THE GAME"
label_settings = SubResource("LabelSettings_78ou3")
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/ButtonVBox/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonVBox/ControlsButton" to="." method="_on_controls_button_pressed"]
